--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "downloader for toranoana online hondana",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --mode development && node scripts/manifest && node scripts/pack",
+    "build": "webpack --mode production && node scripts/manifest && node scripts/pack"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,46 @@
   "bugs": {
     "url": "https://github.com/HonmaMeikodesu/chrome-ext-toranoana-downloader/issues"
   },
-  "homepage": "https://github.com/HonmaMeikodesu/chrome-ext-toranoana-downloader#readme"
+  "homepage": "https://github.com/HonmaMeikodesu/chrome-ext-toranoana-downloader#readme",
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@eslint/js": "^9.14.0",
+    "@types/chrome": "^0.0.287",
+    "@types/express": "^5.0.0",
+    "@types/lodash": "^4.17.12",
+    "@types/node": "^22.10.1",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.14.0",
+    "eslint-plugin-react": "^7.37.2",
+    "express": "^4.21.1",
+    "globals": "^15.12.0",
+    "html-webpack-plugin": "^5.6.3",
+    "sass": "^1.80.6",
+    "sass-loader": "^16.0.3",
+    "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.13.0",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
+  },
+  "dependencies": {
+    "@ant-design/icons": "^5.5.2",
+    "antd": "^5.21.6",
+    "buffer": "^6.0.3",
+    "idb": "^8.0.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "stream-browserify": "^3.0.0",
+    "xml-js": "^1.6.11"
+  }
 }
