--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
   "content_scripts": [
     {
       "matches": [
-        "*://viewer.toraebook.com/imageviewer/*",
+        "*://books.toraebook.com/toraebook/*",
         "http://localhost:8088/*"
       ],
       "js": [
@@ -33,7 +33,7 @@
         "dist/popup.js"
       ],
       "matches": [
-        "*://viewer.toraebook.com/*",
+        "*://*.toraebook.com/*",
         "http://localhost:8088/*"
       ]
     }
