--- a/package.json
+++ b/package.json
@@ -55,12 +55,12 @@
     "@ant-design/icons": "^5.5.2",
     "antd": "^5.21.6",
     "buffer": "^6.0.3",
+    "fast-xml-parser": "^4.5.1",
     "idb": "^8.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "stream-browserify": "^3.0.0",
-    "xml-js": "^1.6.11"
+    "stream-browserify": "^3.0.0"
   }
 }
