--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@ant-design/icons": "^5.5.2",
     "antd": "^5.21.6",
     "buffer": "^6.0.3",
+    "classnames": "^2.5.1",
     "fast-xml-parser": "^4.5.1",
     "idb": "^8.0.0",
     "lodash": "^4.17.21",
