--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "classnames": "^2.5.1",
     "fast-xml-parser": "^4.5.1",
     "idb": "^8.0.0",
+    "linkedom": "^0.18.6",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.3.1",
