--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,8 @@
     "downloads"
   ],
   "host_permissions": [
-    "*://*.toraebook.com/*"
+    "*://*.toraebook.com/*",
+    "https://*.amazonaws.com/viewer.toraebook.com/*"
   ],
   "content_scripts": [
     {
