--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "downloader for toranoana online hondana",
   "version": "1.0",
   "action": {
-    "default_icon": "hello_extensions.png",
+    "default_icon": "icons/icon128.png",
     "default_popup": "dist/index.html"
   },
   "permissions": [
@@ -25,6 +25,12 @@
       ]
     }
   ],
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "background": {
     "service_worker": "dist/background.js"
   },
