--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "babel-loader": "^9.2.1",
+    "bestzip": "^2.2.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.14.0",
     "eslint-plugin-react": "^7.37.2",
