--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "default_popup": "dist/index.html"
   },
   "permissions": [
-    "downloads"
+    "downloads",
+    "storage"
   ],
   "host_permissions": [
     "*://*.toraebook.com/*",
