--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack --mode development && node scripts/manifest && node scripts/pack",
-    "build": "webpack --mode production && node scripts/manifest && node scripts/pack"
+    "build": "export NODE_ENV=production && webpack --mode production && node scripts/manifest && node scripts/pack"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "babel-loader": "^9.2.1",
+    "babel-plugin-import": "^1.13.8",
     "bestzip": "^2.2.1",
     "css-loader": "^7.1.2",
     "eslint": "^9.14.0",
@@ -49,6 +50,7 @@
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.13.0",
     "webpack": "^5.96.1",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
   },
